<resources>
    <string name="app_name">AirDesk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="owned">Owned</string>
    <string name="foreign">Foreign</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="create_workspace">Create Workspace</string>
    <string name="name">Name:</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title:</string>
    <string name="body"></string>
    <string name="editor">Editor</string>
    <string name="enter_file_name">Enter new File name</string>
    <string name="max_capacity">Max capacity (bytes):</string>
    <string name="cancel">Cancel</string>
    <string name="acl">ACL</string>
    <string name="make_public">Make Public</string>
    <string name="make_private">Make Private</string>
    <string name="edit">Edit</string>
    <string name="owned_workspace">Owned Workspace</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="config">Config</string>
    <string name="populate">Populate</string>
    <string name="visibility">Visibility/Tag</string>
    <string name="foreign_workspace">Foreign Workpace</string>
    <string name="tag">tag</string>
    <string name="quota">Quota</string>
    <string name="quotas">Quotas</string>
    <string name="configure_quotas">Configure Quotas</string>
    <string name="min_quota">Min. Quota:</string>
    <string name="max_quota">Max. Quota:</string>
    <string name="change">Change</string>
    <string name="maximum_size_bytes">Maximum size (bytes):</string>
    <string name="currently_occupied_bytes">Currently occupied (bytes):</string>
    <string name="visibility_button">Visibility</string>
    <string name="logout">Log Out</string>

</resources>
