<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/logoutButton"
            android:layout_gravity="center_horizontal"
            android:onClick="logoutOnClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owned"
            android:id="@+id/ownedTextView"
            android:textSize="25sp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:id="@+id/ownedWorkspacesListView"
            android:layout_weight="0.36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreign"
            android:id="@+id/foreignTextView"
            android:textSize="25sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:id="@+id/foreignWorkspacesListView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.55" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/createButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="startCreateWorkspaceActivity" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/deleteButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="startDeleteWorkspaceActivity" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/searchButton"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="startSearchActivity" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
