<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreign_workspace"
        android:id="@+id/workspaceName"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:id="@+id/foreignFilesListView"
        android:layout_weight="0.87" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="58dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/createButton"
            android:onClick="createFileOnClick"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/deleteButton"
            android:layout_marginRight="53dp"
            android:layout_marginEnd="53dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="deleteFileOnClick" />

    </RelativeLayout>

</LinearLayout>