<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="67dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_quotas"
                android:id="@+id/configQuotasTextView"
                android:textSize="35sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12sp" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currently_occupied_bytes"
            android:id="@+id/currOccupiedTextView"
            android:textSize="25sp"
            android:layout_marginLeft="10sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TotalFileSize"
        android:id="@+id/totalFileSizeTextView"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/currOccupiedTextView"
        android:layout_toEndOf="@+id/currOccupiedTextView"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="5sp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximum_size_bytes"
            android:id="@+id/maxQuotaTextView"
            android:textSize="25sp"
            android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="283sp"
            android:layout_height="wrap_content"
            android:id="@+id/maxQuotaEditText"
            android:inputType="none"
            android:layout_alignBottom="@+id/maxQuotaButton"
            android:layout_marginLeft="10sp"
            android:layout_toLeftOf="@+id/maxQuotaButton"
            android:layout_toStartOf="@+id/maxQuotaButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/maxQuotaButton"
            android:onClick="changeMaxQuota"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>